    - Resolve Issue #3248 - Removing '-Wl,-Bsymbolic' from SHLIBVERSIONFLAGS
      NOTE: If your build depends on the above you must now add to your SHLIBVERSIONFLAGS
    - Speedup bin/docs-update-generated by caching parsed docbook schema. (60x speedup)
    - Reorganized source tree. Moved src/engine/SCons to SCons to be more in line with current Python source
      tree organization practices.

  From Jeremy Elson:
    - Updated design doc to use the correct syntax for Depends()

  From Adam Gross:
    - Added support for scanning multiple entries in an action string if
      IMPLICIT_COMMAND_DEPENDENCIES is set to 2 or 'all'. This enables more thorough
      action scanning where every item in each command line is scanned to determine
      if it is a non-source and non-target path and added to the list of implicit dependencies
      for the target.
    - Added support for taking instances of the Value class as implicit
      dependencies.
    - Added new module SCons.Scanner.Python to allow scanning .py files.
    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
      when the value can't be converted to a string or if having a name is otherwise desirable.
    - Fixed usage of abspath and path for RootDir objects on Windows. Previously
      env.fs.Dir("T:").abspath would return "T:\T:" and now it correctly returns "T:".

  From Iosif Kurazs:
    - Added a new flag called "linedraw" for the command line argument  "--tree"
      that instructs scons to use single line drawing characters to draw the dependency tree.

  From Ivan Kravets, PlatformIO
    - New conditional C Scanner (`SCons.Scanner.C.CConditionalScanner()`)
      which interprets C/C Preprocessor conditional syntax (#ifdef, #if, #else,
      #elif, #define, etc.)
    - Improvements for virtual C Pre-Processor:
      * Handle UNSIGNED LONG and LONG numeric constants in DEC (keep support for HEX)